--- a/package.json
+++ b/package.json
@@ -6,30 +6,34 @@
     "dev": "next dev -p 4444",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint && prettier --write --ignore-path .gitignore ."
+    "lint": "next lint --fix && prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
     "0xsequence": "^1.9.37",
     "@0xsequence/design-system": "^1.7.5",
     "@0xsequence/kit": "^2.9.2",
     "@0xsequence/kit-connectors": "^2.9.2",
-    "@tanstack/react-query": "^5.51.9",
+    "@tanstack/react-query": "^5.51.15",
     "ethers": "5.7.2",
     "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
-    "viem": "^2.17.5",
-    "wagmi": "^2.11.2"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "viem": "^2.18.4",
+    "wagmi": "^2.12.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^22.0.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-unused-imports": "^4.0.1",
     "prettier": "^3.3.3",
-    "typescript": "^5"
+    "typescript": "^5.5.4"
   },
   "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903"
 }
