--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev -p 4444",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --fix && prettier --write --ignore-path .gitignore ."
+    "lint": "next lint --fix && prettier --write --ignore-path .prettierignore ."
   },
   "dependencies": {
     "0xsequence": "1.9.37",
