--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "0xsequence": "1.9.37",
     "@0xsequence/design-system": "^1.7.5",
+    "@0xsequence/indexer": "1.9.37",
     "@0xsequence/kit": "2.9.2",
     "@0xsequence/kit-connectors": "^2.9.2",
     "@tanstack/react-query": "^5.51.15",
