--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@0xsequence/indexer": "1.9.37",
     "@0xsequence/kit": "2.9.2",
     "@0xsequence/kit-connectors": "^2.9.2",
+    "@0xsequence/network": "^1.10.8",
     "@tanstack/react-query": "^5.51.15",
     "ethers": "5.7.2",
     "next": "14.2.5",
