--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 4444",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint --fix && prettier --write --ignore-path .prettierignore ."
+    "lint": "next lint --fix && prettier --write --ignore-path .prettierignore .",
+    "postinstall": "(cp -n .env.example .env) || echo already exists"
   },
   "dependencies": {
     "0xsequence": "1.9.37",
