--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "postinstall": "(cp -n .env.example .env) || echo already exists"
   },
   "dependencies": {
-    "0xsequence": "2.0.11",
+    "0xsequence": "2.2.8",
     "@0xsequence/design-system": "^1.8.0",
     "@0xsequence/indexer": "^2.0.26",
     "@0xsequence/kit": "^4.4.4",
     "@0xsequence/network": "^2.0.26",
     "@tanstack/react-query": "^5.61.0",
-    "boilerplate-design-system": "github:0xsequence-demos/boilerplate-design-system#6277cbe",
+    "boilerplate-design-system": "github:0xsequence-demos/boilerplate-design-system#8bd5689ba369a604aa7d127c9ba36152e0a5d98c",
     "ethers": "6.13.3",
     "next": "14.2.14",
+    "pino-pretty": "^13.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sonner": "^1.7.2",
+    "tailwindcss-react-aria-components": "^1.2.0",
     "viem": "^2.21.48",
     "wagmi": "^2.13.0",
     "zod": "^3.24.1"
@@ -39,6 +41,7 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-unused-imports": "^4.1.4",
     "postcss": "^8.5.1",
+    "postcss-import": "^16.1.0",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.6.3"
