--- a/package.json
+++ b/package.json
@@ -10,17 +10,19 @@
     "postinstall": "(cp -n .env.example .env) || echo already exists"
   },
   "dependencies": {
-    "0xsequence": "2.2.8",
+    "0xsequence": "2.3.9",
+    "@0xsequence/connect": "^5.1.1",
     "@0xsequence/design-system": "^1.8.0",
-    "@0xsequence/kit": "^4.4.4",
+    "@react-oauth/google": "^0.11.1",
+    "@tanstack/react-query": "^5.74.4",
     "boilerplate-design-system": "github:0xsequence-demos/boilerplate-design-system#fed9fa2f7ecb904380c7b3e8550665af4be771ba",
     "ethers": "6.13.5",
-    "next": "14.2.25",
+    "next": "14.2.28",
     "pino-pretty": "^13.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "viem": "^2.21.48",
-    "wagmi": "^2.13.0",
+    "wagmi": "^2.14.16",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -37,5 +39,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.6.3"
   },
-  "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903"
+  "engines": {
+    "node": ">=22.0.0"
+  }
 }
