--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "0xsequence": "2.3.9",
     "@0xsequence/connect": "^5.1.1",
-    "@0xsequence/design-system": "^1.8.0",
+    "@0xsequence/design-system": "^2.1.7",
     "@react-oauth/google": "^0.11.1",
     "@tanstack/react-query": "^5.74.4",
-    "boilerplate-design-system": "github:0xsequence-demos/boilerplate-design-system#ee41a96d41ae0ae8048114c53bd8020136583556",
+    "boilerplate-design-system": "github:0xsequence-demos/boilerplate-design-system#52feab2d7a6a211028c7f8791ffff12fccab41e9",
     "ethers": "6.13.5",
     "next": "15.3.0",
     "pino-pretty": "^13.0.0",
@@ -26,6 +26,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.4",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
@@ -36,7 +37,7 @@
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-unused-imports": "^4.1.4",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.4",
     "typescript": "^5.6.3"
   },
   "engines": {
