--- a/package.json
+++ b/package.json
@@ -10,36 +10,38 @@
     "postinstall": "(cp -n .env.example .env) || echo already exists"
   },
   "dependencies": {
-    "0xsequence": "2.3.9",
-    "@0xsequence/connect": "^5.2.1",
-    "@0xsequence/design-system": "^2.1.7",
-    "@0xsequence/network": "^2.3.10",
-    "@react-oauth/google": "^0.11.1",
-    "@tanstack/react-query": "^5.74.11",
-    "boilerplate-design-system": "github:0xsequence-demos/boilerplate-design-system#52feab2d7a6a211028c7f8791ffff12fccab41e9",
-    "ethers": "6.13.5",
-    "next": "15.3.0",
+    "0xsequence": "2.3.12",
+    "@0xsequence-demos/boilerplate-design-system": "^0.2.3",
+    "@0xsequence/connect": "^5.3.1",
+    "@0xsequence/design-system": "^2.1.12",
+    "@0xsequence/network": "^2.3.12",
+    "@0xsequence/wallet-widget": "^5.3.1",
+    "@react-oauth/google": "^0.12.2",
+    "@tanstack/react-query": "^5.76.1",
+    "ethers": "6.14.0",
+    "next": "15.3.2",
     "pino-pretty": "^13.0.0",
+    "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "viem": "^2.28.1",
-    "wagmi": "^2.15.1",
-    "zod": "^3.24.1"
+    "viem": "^2.29.2",
+    "wagmi": "^2.15.3",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.4",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.14",
-    "eslint-config-prettier": "^9.1.0",
+    "@tailwindcss/postcss": "^4.1.6",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
+    "eslint": "^9.26.0",
+    "eslint-config-next": "15.3.2",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "prettier": "^3.3.3",
-    "tailwindcss": "^4.1.4",
-    "typescript": "^5.6.3"
+    "prettier": "^3.5.3",
+    "tailwindcss": "^4.1.6",
+    "typescript": "^5.8.3"
   },
   "engines": {
     "node": ">=22.0.0"
