--- a/package.json
+++ b/package.json
@@ -17,17 +17,19 @@
     "@0xsequence/network": "^2.3.12",
     "@0xsequence/wallet-widget": "^5.3.1",
     "@heroicons/react": "^2.2.0",
-    "@react-oauth/google": "^0.12.2",
+    "@react-oauth/google": "^0.11.1",
+    "@supabase/supabase-js": "^2.53.0",
     "@tanstack/react-query": "^5.76.1",
     "ethers": "6.14.0",
+    "firebase": "^12.0.0",
     "framer-motion": "^12.23.11",
     "graphql-request": "^7.2.0",
     "next": "15.3.2",
     "pino-pretty": "^13.0.0",
     "postcss": "^8.5.3",
-    "react": "^19.1.0",
+    "react": "^18.3.1",
     "react-confetti": "^6.4.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "viem": "^2.29.2",
     "wagmi": "^2.15.3",
