--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,11 +16,11 @@ jobs:
             - name: Set up Node.js
               uses: actions/setup-node@v4
               with:
-                node-version: '18'
+                node-version: '22'
                 cache: 'pnpm'
 
             - name: Install pnpm
-              run: npm install -g pnpm
+              run: npm install -g pnpm@9.5.0
               
             - name: Install dependencies
               run: pnpm install
