--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,29 +1,37 @@
 name: Build FlashSuite
 
 on:
-    push:
-        branches:
-            - '*'
+  push:
+    branches:
+      - '*'
 
 jobs:
-    build: 
-        name: Build and verify FlashSuite
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
-            
-            - name: Install pnpm
-              uses: pnpm/action-setup@v4
-
-            - name: Set up Node.js
-              uses: actions/setup-node@v4
-              with:
-                node-version: '22'
-                cache: 'pnpm'
-              
-            - name: Install dependencies
-              run: pnpm install
-
-            - name: Build the project
-              run: pnpm build
+  build:
+    name: Build and verify FlashSuite
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+          
+      - name: Enable Corepack
+        run: corepack enable
+        
+      - name: Set up pnpm cache
+        uses: actions/cache@v4
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-pnpm-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-
+          
+      - name: Install dependencies
+        run: pnpm install
+        
+      - name: Build the project
+        run: pnpm build
